--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@
 /* ------Logo end------ */
 
 
+/* contenuto primo conteiner content */
+
 #Conteiner-1content{
     width: 51%;
     height: 60%;
@@ -52,4 +54,31 @@
     margin-top: 30px;
 
     text-align: center;
+}
+
+
+/* FINE  contenuto primo conteiner content FINE */
+
+
+
+#Conteiner-2content{
+    width: 32%;
+    height: 40%;
+    background-color: rgb(0, 56, 0);
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    margin-top: 30px;
+}
+
+#Bottone1 input{
+    padding: 20px 130px 20px 10px;
+    border-radius: 6px;
+    border: none;
+}
+
+#Bottone2 input{
+    padding: 20px;
+    border: none;
+    border-radius: 6px;
 }
