--- a/style.css
+++ b/style.css
@@ -62,23 +62,35 @@
 
 
 #Conteiner-2content{
-    width: 32%;
-    height: 40%;
+    width: 35%;
+    height: 15%;
     background-color: rgb(0, 56, 0);
-    display: flex;
-    justify-content: space-between;
     margin: auto;
     margin-top: 30px;
 }
 
 #Bottone1 input{
-    padding: 20px 130px 20px 10px;
+    padding: 20px 162px 20px 10px;
     border-radius: 6px;
     border: none;
 }
 
 #Bottone2 input{
-    padding: 20px;
+    padding: 20px 25px 20px 25px;
     border: none;
     border-radius: 6px;
+    margin-left: 4%;
+}
+
+#Conteiner-2content p{
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.78rem;
+    text-align: center;
+    margin-top: 30px;
+}
+
+#Conteiner-2content p a{
+    color: white;
+    font-family: 'Roboto', sans-serif;
 }
