--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 #Conteiner-principale{
     width: 85vw;
-    height: 100vh;
-    background-color: greenyellow;
+    height: 120vh;
+    background-color: #0f2d25;
     margin: auto;
 }
 
@@ -33,8 +33,7 @@
 
 #Conteiner-1content{
     width: 51%;
-    height: 60%;
-    background-color: green;
+    height: 50%;
     margin: auto;
     
 }
@@ -60,11 +59,10 @@
 /* FINE  contenuto primo conteiner content FINE */
 
 
-
+/*contenuto secondo conteiner content  */
 #Conteiner-2content{
     width: 35%;
-    height: 15%;
-    background-color: rgb(0, 56, 0);
+    height: 12%;
     margin: auto;
     margin-top: 30px;
 }
@@ -93,4 +91,25 @@
 #Conteiner-2content p a{
     color: white;
     font-family: 'Roboto', sans-serif;
+}
+
+
+/* FINE contenuto secondo conteiner content FINE */
+
+
+
+#Conteiner-3content{
+    width: 63%;
+    height: 56%;
+    margin: auto;
+    margin-top: 7%;
+    background-image: url(img/sfondo-1.webp);
+    background-repeat: no-repeat;
+}
+
+
+#Conteiner-4content{
+    width: 500px;
+    height: 1500px;
+    background-color: aquamarine;
 }
