--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@
 
 
 
-#Conteiner-3content{
+#Sfondo1{
     width: 63%;
     height: 56%;
     margin: auto;
@@ -115,7 +115,26 @@
 
 
 #Conteiner-4content{
-    width: 500px;
-    height: 1500px;
-    background-color: aquamarine;
+    width: 60%;
+    height: 20%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.Elementi{
+    width: 30%;
+    height: 100%;
+    margin: 0px 15px 0px;
+}
+
+.Elementi h4{
+    margin: 10px 0px;
+    font-size: 1.3rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+.Elementi p{
+    font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
 }
